src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>BSC_Event_Trainer__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>BSC Event Trainer</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>For credit control to decide whether the activity is related to complywise or BSC</description>
        <inlineHelpText>For credit control to decide whether the activity is related to complywise or BSC</inlineHelpText>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complywise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Control__c</fullName>
        <description>Credit control stage</description>
        <inlineHelpText>Select current credit control stage</inlineHelpText>
        <label>Credit Control</label>
        <picklist>
            <picklistValues>
                <fullName>Since paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write off delinquent debtor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork corrected. Pmt expected &lt;30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow, confirmed anticipated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purch order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Reminder before CCC &amp;/or admin order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recon required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow, to follow up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Account_Name__c</fullName>
        <description>Auto-populated on creation of BSC Event Trainer records</description>
        <inlineHelpText>Name of Account (for In-Company Events)</inlineHelpText>
        <label>Event Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Postcode__c</fullName>
        <description>Auto populated on creation of BSC Event Trainer records to allow tracking of locations</description>
        <label>Event Postcode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Stage__c</fullName>
        <description>Auto-populated on creation of BSC Event Trainer record</description>
        <inlineHelpText>Current Event Stage</inlineHelpText>
        <label>Event Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Trainer_Status__c</fullName>
        <label>Event Trainer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Earning_FE__c</fullName>
        <description>for trainer calendar events</description>
        <inlineHelpText>for trainer calendar events</inlineHelpText>
        <label>Fee-Earning (FE)</label>
        <picklist>
            <picklistValues>
                <fullName>FE - Prod Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Scoping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Report writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - QA review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Distance learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Learner support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Marking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - NVQ assessment/verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Projects (external)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - E-learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE - Travel to/from Int client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migrated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Activity or Event data has been Migrated from Course Booker</description>
        <label>Migrated__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Fee_Earning_External_NFEE__c</fullName>
        <description>for trainer calendar events</description>
        <inlineHelpText>for trainer calendar events</inlineHelpText>
        <label>Non-Fee-Earning – External (NFEE)</label>
        <picklist>
            <picklistValues>
                <fullName>NFEE - Training sit-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Shadow audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Client meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEE - Travel to/from UK client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Fee_Earning_Internal_NFEI__c</fullName>
        <description>for trainer calendar events</description>
        <inlineHelpText>for trainer calendar events</inlineHelpText>
        <label>Non-Fee-Earning – Internal (NFEI)</label>
        <picklist>
            <picklistValues>
                <fullName>NFEI - Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - WFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Induction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Staff training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - CPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Standardisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Internal meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - Project (internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFEI - H&amp;S issue (internal)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Working_Day_NWD__c</fullName>
        <description>for trainer calendar events</description>
        <inlineHelpText>for trainer calendar events</inlineHelpText>
        <label>Non-Working Day (NWD)</label>
        <picklist>
            <picklistValues>
                <fullName>NWD - Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NWD - TOIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NWD - Medical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PK_CB_ACT_ID__c</fullName>
        <description>This is the Primary Key of the Activity from the source Activity data and maps to ACTIVITY.ACT_ID  from the Activity  table in the CB database.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a System Administrator field</inlineHelpText>
        <label>PK_CB_ACT_ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stop_Event_Deletion__c</fullName>
        <description>If the Value for the record is true and the Partner user tries to delete this event (Activity) it will stop them, look at BUTTON SCRIPT CustomDelete</description>
        <formula>AND
(
    TEXT($User.UserType) = &apos;PowerPartner&apos;,
    OwnerId = $User.Id,
    ISBLANK( BSC_Event_Trainer__c ) = FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stop Event Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapup_Department__c</fullName>
        <label>Wrapup Department</label>
        <picklist>
            <picklistValues>
                <fullName>01 Membership/Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 Awarding Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 Abandoned call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Policy And Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wrapup_subtype__c</fullName>
        <label>Wrapup subtype</label>
        <picklist>
            <picklistValues>
                <fullName>01 Membership/Client Services - Payment/invoice Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 Membership/Client Services - Sales enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 Membership/Client Services - Membership service and admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 Membership/Client Services - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 Sales - Sales enquiry (new/existing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 Sales - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 Sales - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 Awarding Body - Approved Centres/OQS queries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 Awarding Body - Application and awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 Awarding Body - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - E-learning set up (iosh/nebosh etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - E-learning LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - Audits/reports/cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - NVQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - Examinations Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - Associates and trainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Logistics/Operations - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Finance - Payment/invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Finance - Accounts payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Finance - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Finance - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 Marketing - Event/Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 Marketing - Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 Abandoned call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 Human Resources - All Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Policy And Communications - All Enquiries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_My_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All My Activities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Tasks</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>EVENT.ALL_DAY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>soat__A2_My_Upcoming_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>A2 - My Upcoming Events</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>soat__A3_My_Emails_to_Saleforce</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>A3 - My Emails to Saleforce This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>soat__A4_My_Unresolved_Emails_to_Saleforce</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Unresolved</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>A4 - My Unresolved Emails to Saleforce</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>soat__B1_My_Tasks_This_Week</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>B1 - My Tasks This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>soat__B2_My_Events_This_Week</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>B2 - My Events This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>